--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,14 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix",
+        "phpcs": "phpcs --standard=PSR12 src",
+        "phpcbf": "phpcbf --standard=PSR12 src",
+        "rector": "rector process src --ansi",
+        "translations": "php bin/console debug:translation en",
+        "tlumaczenia": "php bin/console debug:translation pl"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -98,7 +105,10 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.1",
         "fakerphp/faker": "^1.24",
+        "friendsofphp/php-cs-fixer": "^3.87",
         "phpunit/phpunit": "^12.3",
+        "rector/rector": "^2.1",
+        "squizlabs/php_codesniffer": "^3.13",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
