--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,6 +6,8 @@ framework:
     handle_all_throwables: true
 
     default_locale: 'pl'
+    translator:
+        default_path: '%kernel.project_dir%/translations'
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
